# soyking

./: LICENSE  README.md  setup.cfg
docs/: soyking.ipynb
soyking/: __init__.py  action_update_shipping_cost.py  main.py  schemas.py
test_soyking/: execute_locally.py  test_local_execution.py  test_soyking.py
test_soyking/data/inputs/: README.md  demands.csv  shipping_costs.csv  supplies.csv  testing_data.xlsx
test_soyking/data/outputs/: README.md  ship_flow.csv
test_soyking/data/testing_data/: tiny_data.json
