[metadata]
name = soyking
version = attr: soyking.__version__
author = Andrea Rujano
author_email = andrea.jenir@mipwise.com
description = Illustration package about the SoyKing problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/soyking
project_urls =
    Bug Tracker = https://github.com/mipwise/soyking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = soyking
install_requires =
    ticdat>=0.2.21
    pandas>=0.18.1
    gurobipy==9.5.0
    pulp>=1.20
python_requires = >=3.6